@@ -4,7 +4,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: SetClassProcs.3,v 1.5 2008/07/08 22:40:51 patthoyts Exp $
+'\" RCS: @(#) $Id: SetClassProcs.3,v 1.6 2010/01/10 20:27:25 nijtmans Exp $
 '\" 
 .so man.macros
 .TH Tk_SetClassProcs 3 8.4 Tk "Tk Library Procedures"
@@ -20,7 +20,7 @@ Tk_SetClassProcs \- register widget specific procedures
 .AS Tk_ClassProc instanceData
 .AP Tk_Window tkwin in
 Token for window to modify.
-.AP Tk_ClassProcs *procs in
+.AP "const Tk_ClassProcs" *procs in
 Pointer to data structure containing widget specific procedures.
 The data structure pointed to by \fIprocs\fR must be static:
 Tk keeps a reference to it as long as the window exists.
